--- a/app/templates/province/uploadScore.html
+++ b/app/templates/province/uploadScore.html
@@ -17,6 +17,7 @@
 
 		<div id="zyupload" class="zyupload"></div>
 		<div class="content-margin"><button class="layui-btn layui-btn-lg" id="analyseAll">一键计算所有成绩</button></div>
+		<div style=" margin: 10px;">(大约需要几分钟时间，请稍等！)</div>
 	</div>
 
 
@@ -68,6 +69,7 @@
             finishDel: true,  				  // 是否在上传文件完成后删除预览
             /* 外部获得的回调接口 */
             onSuccess: function (file, response) {          // 文件上传成功的回调方法
+                layer.closeAll();
                 res=$.parseJSON(response);
                 if(res.code==0){
                      layer.alert("导入成功！"+res.msg,{icon:1})
@@ -80,18 +82,24 @@
                 layer.alert("文件上传失败")
             }
         });
-
+		$(".upload_btn").bind("click",function(res){
+             layer.load(0,{shade:0.2,time:100*1000});
+		})
 		//计算所有
 		$('#analyseAll').bind('click',function(){
-			var index = layer.load(0, {shade:0.5,time: 10*1000}); //目前没有最长时间，直接运行到结束
+			var index = layer.load(0, {shade:0.5,time: 100*1000}); //目前没有最长时间，直接运行到结束
+			$("#analyseAll").attr({"disabled":"disabled"});
+			$("#analyseAll").text("计算中,请稍等");
 			$.post('/api/calculateAll',function(res){
 				layer.close(index);
 				if(res.code==0){
-					layer.msg("计算完成！");
+					layer.alert("计算完成！");
 				}
 				else{
 					layer.alert("计算出错！"+res.msg);
 				}
+				//动用主页的刷新，手动刷新界面
+                $("a[data-refresh]").click();
 			})
 		});
 		$('#analyseStudent').bind('click',function(){
