--- a/app/templates/school/uploadStudent.html
+++ b/app/templates/school/uploadStudent.html
@@ -114,6 +114,7 @@
 
             onSuccess: function (file, response) {          // 文件上传成功的回调方法
                 res=$.parseJSON(response);
+                layer.closeAll();
                 if(res.code==0){
                      layer.alert("导入成功！"+res.msg,{icon:1})
                 }
@@ -125,6 +126,8 @@
                 layer.alert("文件上传失败")
             }
         });
-
+        $(".upload_btn").bind("click",function(res){
+             layer.load(0,{shade:0.2,time:100*1000});
+		})
     });
 </script>
