--- a/app/templates/province/testingStandard.html
+++ b/app/templates/province/testingStandard.html
@@ -15,8 +15,8 @@
 									<option value="2">大二</option>
 									<option value="3">大三</option>
 									<option value="4">大四</option>
-									<option value="5">大五</option>
-									<option value="6">大五以上</option>
+<!--									<option value="5">大五</option>-->
+<!--									<option value="6">大五以上</option>-->
 		                        </select>
 		                    </div>
 		                </div>
