--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -59,7 +59,7 @@
 <div class="main-body">
     <div class="login-main">
         <div class="login-top">
-            <span>高校体测数据处理系统</span>
+            <span>浙江省高校体测数据处理系统</span>
             <span class="bg1"></span>
             <span class="bg2"></span>
         </div>
