add numbers in all table&&add sort in schoolrank_projectrank.schoolname&&add loadlayer in school

--- a/app/templates/province/check.html
+++ b/app/templates/province/check.html
@@ -36,7 +36,8 @@
                 icon: 'layui-icon-tips'
             }],
             cols: [[
-                {field: 'id', title: '序号'},
+                {type: 'numbers',title: '序号', width:40},
+                {field: 'id', title: '序号',hide:true},
                 {field: 'college_name', title: '学院（系）名称', minWidth: 150},
                 {field: 'grade', title: '年级'},
                 {field: 'class_name', title: '专业班级'},
