--- a/app/templates/province/checkList.html
+++ b/app/templates/province/checkList.html
@@ -19,7 +19,8 @@
             elem: '#currentTableId',
             data:[],
             cols: [[
-                {field: 'id', title: '序号'},
+                {type: 'numbers',title: '序号', width:40},
+                {field: 'id', title: '序号',hide:true},
 				{field: 'name', title: '学校名称'},
                 {field: 'total_num', title: '提交人数'},
 				{field: 'update_time', title: '提交时间'},
