--- a/app/templates/province/projectRank.html
+++ b/app/templates/province/projectRank.html
@@ -84,7 +84,7 @@
             toolbar:true,
             cols: [[
                 {field: 'id', title: '序号'},
-				{field: 'school_name', title: '学校名称'},
+				{field: 'school_name', title: '学校名称',sort:true},
                 {field: 'score', title: '平均分数', sort: true},
 				{field: 'score_rank', title: '分数排名'},
 				{field: 'pass_rate', title: '及格率', sort: true,templet:passTrans},
