--- a/app/templates/province/testingStandard.html
+++ b/app/templates/province/testingStandard.html
@@ -69,7 +69,8 @@
 			limits:[100,200,300],
 			limit:100,
             cols: [[
-                {field: 'id', title: '序号'},
+                {type: 'numbers',title: '序号', width:40},
+                {field: 'id', title: '序号',hide:true},
 				{field: 'name', title: '标准名称',edit:"text", sort: true},
                 {field: 'score', title: '换算分数',edit:"text", sort: true},
 				{field: 'bottom', title: '区间下限',edit:"text", sort: true},
