--- a/app/templates/school/removeTStudent.html
+++ b/app/templates/school/removeTStudent.html
@@ -86,7 +86,8 @@
 			defaultToolbar: ['filter', 'exports', 'print'],
 			cols: [[
 				{type: "checkbox", width: 50},
-				{field: 'id', title: '序号'},
+                {type: 'numbers',title: '序号', width:40},
+				{field: 'id', title: '序号',hide:true},
 				{field: 'college_name', title: '学院（系）名称', minWidth: 150, sort: true},
 				{field: 'grade', title: '年级', sort: true},
 				{field: 'class_name', title: '专业班级', sort: true},
