--- a/app/templates/school/uploadStudent.html
+++ b/app/templates/school/uploadStudent.html
@@ -30,7 +30,7 @@
 			toolbar:'#toolbarDemo',
 			defaultToolbar: ['filter', 'exports', 'print'],
             cols: [[
-                {field: 'id', title: 'ID', sort: true},
+                {field: 'id', title: '序号', sort: true},
                 {field: 'grade', title: '年级'},
                 {field: 'total_num', title: '总人数'},
                 {field: 'boy_num',  title: '男生人数'},
