--- a/app/templates/province/school.html
+++ b/app/templates/province/school.html
@@ -57,7 +57,8 @@
             toolbar: '#toolbarDemo',
             defaultToolbar: ['filter', 'exports', 'print'],
             cols: [[
-                {field: 'id', title: '序号'},
+                {type: 'numbers',title: '序号', width:40,fixed: 'left'},
+                {field: 'id', title: '序号',hide:true},
 				{field: 'name', title: '学校名称', sort: true},
                 {field: 'code', title: '学校代码'},
 				{field: 'type', title: '学校类比', sort: true},
