--- a/app/templates/province/schoolRank.html
+++ b/app/templates/province/schoolRank.html
@@ -71,7 +71,7 @@
 
         baseTitle=[
                 {field: 'id', title: '序号',minWidth:"30"},
-				{field: 'school_name', title: '学校名称',minWidth:"150"},
+				{field: 'school_name', title: '学校名称',minWidth:"150",sort:true},
                 {field: 'score', title: '总得分', sort: true},
                 {field: 'pass_rate', title: '及格率', sort: "true",templet:passTrans,minWidth:"100"},
                 {field: 'good_rate', title: '优良率', sort: "true",templet:goodTrans,minWidth:"100"},
