edit schoolscore to select all sex

--- a/app/templates/school/schoolScore.html
+++ b/app/templates/school/schoolScore.html
@@ -73,7 +73,7 @@
 		    toolbar: 'true',
 		    defaultToolbar: ['filter', 'exports', 'print'],
 		    cols: [[
-		        {field: 'id', title: '序号'},
+		        {title: '序号',type:'numbers'},
 		        {field: 'project_name', title: '项目名', minWidth: 150},
 		        {field: 'score', title: '平均分', sort: true},
 		        {field: 'score_rank', title: '排名'},
