edit word error

--- a/app/templates/province/editSchool.html
+++ b/app/templates/province/editSchool.html
@@ -15,7 +15,7 @@
 		    </div>
 		</div>
         <div class="layui-form-item">
-            <label class="layui-form-label required">学校类比</label>
+            <label class="layui-form-label required">学校类别</label>
             <div class="layui-input-block">
                 {% if school.type=="本科" %}
                 <input type="radio" name="type" value="本科" title="本科" checked=>
