--- a/app/templates/province/school.html
+++ b/app/templates/province/school.html
@@ -61,7 +61,7 @@
                 {field: 'id', title: '序号',hide:true},
 				{field: 'name', title: '学校名称', sort: true},
                 {field: 'code', title: '学校代码'},
-				{field: 'type', title: '学校类比', sort: true},
+				{field: 'type', title: '学校类别', sort: true},
                 {title: '操作', minWidth: 150, toolbar: '#currentTableBar', align: "center"}
             ]],
             limits: [10, 15, 20, 25, 50, 100],
