--- a/app/templates/province/testingStandard.html
+++ b/app/templates/province/testingStandard.html
@@ -73,8 +73,8 @@
                 {field: 'id', title: '序号',hide:true},
 				{field: 'name', title: '标准名称',edit:"text", sort: true},
                 {field: 'score', title: '换算分数',edit:"text", sort: true},
-				{field: 'bottom', title: '区间下限',edit:"text", sort: true},
-				{field: 'top', title: '区间上限',edit:"text", sort: true},
+				{field: 'bottom', title: '成绩下限',edit:"text", sort: true},
+				{field: 'top', title: '成绩上限',edit:"text", sort: true},
 				{field: 'level', title: '年级'},
 				{field: 'comment', title: '备注',edit:"text"},
                 {title: '操作', minWidth: 150, toolbar: '#currentTableBar', align: "center"}
