--- a/app/templates/province/addSchool.html
+++ b/app/templates/province/addSchool.html
@@ -14,7 +14,7 @@
 		    </div>
 		</div>
         <div class="layui-form-item">
-            <label class="layui-form-label required">学校类比</label>
+            <label class="layui-form-label required">学校类别</label>
             <div class="layui-input-block">
                 <input type="radio" name="type" value="本科" title="本科" checked="">
                 <input type="radio" name="type" value="高职高专" title="高职高专">
